# nmq

./: .gitignore  CMakeLists.txt  PROTOCOL.md  README.md
src/: callback.c  callback.h  main.c  output.txt  requests.c  requests.h  song.h  song_queue.c  test.c  url_fetch.c  url_fetch.h
src/cpp/: requests.cpp  requests.hpp  ytstream.cpp  ytstream.hpp
src/python/: get_video_info.py  jsinterp.py
test/web/: testclient.html  testclient.js
test/ytdl/: how-it-works.txt  listfuncs.txt  ytdl.py
